<resources>
    <string name="app_name">외않와</string>

    <string name="default_notification_channel_id">WhereAreYou</string>

    <string name="memo_list_title">메모장</string>
    <string name="add_memo">메모 추가</string>
    <string name="memo_register_title">메모 작성</string>
    <string name="hint_title">제목</string>
    <string name="helper_text_title">제목을 입력해 주세요.</string>
    <string name="helper_text_content">내용을 입력해 주세요.</string>
    <string name="hint_content">내용</string>
    <string name="picture">사진</string>
    <string name="add">추가하기</string>

    <string name="pic_loading">사진 가져오는 중</string>
    <string name="pic_all">모든 사진</string>
    <string name="tools_content">내용내용내용 내용내용내용</string>
    <string name="tools_title">제목 입니다.</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="memo_edit_title">메모 수정</string>
    <string name="url_input_help">이미지 주소를 입력해 주세요.</string>
    <string name="url">Url input</string>
    <string name="url_input_title">주소로 이미지 추가</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="toat_url_duplicate">같은 주소의 이미지는 하나만 등록할 수 있습니다.</string>
    <string name="toast_url_invalid">유효하지 않은 주소입니다.</string>
    <string name="img_empty">이미지가 없습니다.\n수정을 눌러 추가 해보세요.</string>
    <string name="denied_camera">사진 촬영을 위해\n카메라 권한에 동의해주세요.</string>
    <string name="denied_storage">갤러리 접근을 위해\n저장공간 권한에 동의해주세요.</string>
    <string name="input_chat_hint">메시지 작성</string>
    <string name="dda_bong">👍</string>
    <string name="sign_up_success_title">가입을 축하드려요!</string>
    <string name="sign_up_success_message">약속을 만들고 링크를 공유하세요!</string>
    <string name="optional_title">추가 정보</string>
    <string name="required_title">필수 정보</string>

    <string name="make_meet_button_disable">필수 정보를 모두 입력해 주세요.</string>
    <string name="make_meet_button_enable">약속 만들기</string>
    <string name="make_meet_date_and_time">날짜 및 시간</string>
    <string name="make_meet_location">장소</string>
    <string name="make_meet_participant">참석 인원</string>
    <string name="make_meet_memo">메모 남기기</string>
    <string name="make_meet_penalty">벌칙 정하기</string>
    <string name="send_invitation_card">초대장 보내기</string>
    <string name="search_location_hint">장소 입력</string>

    <string name="empty_memo">메모를 입력해주세요</string>
    <string name="date_and_time_announce">언제, 몇시에 만나나요?</string>
    <string name="participant_announce">나중에도 인원을 수정할 수 있어요</string>
    <string name="empty_participant_count">참석 인원을 입력해주세요.</string>
    <string name="target">대상</string>
    <string name="penalty">벌칙</string>

    <string name="target_1">꼴찌</string>
    <string name="target_2">지각한 사람 모두</string>

    <string name="penalty_1">커피 사기</string>
    <string name="penalty_2">밥 사기</string>
    <string name="penalty_3">춤추면서 입장하기</string>
    <string name="penalty_4">벌금 내기</string>

    <string name="sign_up_create_name_title">6자 이내로\n이름을 알려주세요.</string>
    <string name="sign_up_create_name_edt_hint">김만나</string>
    <string name="sign_up_create_name_error_message_consonant_vowel">자음, 모음은 불가능합니다.</string>
    <string name="sign_up_create_name_error_message_length">6자 이내로 입력해주세요.</string>
    <string name="sign_up_create_name_error_message_hangul">한글만 입력 가능합니다.</string>
    <string name="sign_up_create_name_available_message">사용 가능합니다.</string>
    <string name="sign_up_next">다음 단계로</string>
    <string name="sign_up_profile_guide_title">친구들에게 보여줄\n프로필을 등록해주세요.</string>
    <string name="sign_up_profile_guide_tip">셀피를 등록하면 친구들이 알아보기 좋아요 :D</string>
    <string name="sign_up_album">앨범에서 가져오기</string>
    <string name="sign_up_profile_confirm_title">멋진 사진이네요!\n이대로 진행할까요?</string>
    <string name="sign_up_modify">다시 수정할래요</string>
    <string name="sign_up_service_terms_title">서비스 이용약관에\n동의해주세요.</string>
    <string name="sign_up_service_terms_agree">위 이용약관에 동의합니다.(필수)</string>
    <string name="sign_up_sign_up">동의하고 가입하기</string>

    <string name="notice">공지사항</string>
    <string name="service_terms">서비스 이용약관</string>

    <string name="delete_account_reason">탈퇴 사유를 알려주세요.</string>
    <string name="multiple_select_possible">*복수선택가능</string>
    <string name="delete_account_reason_1">개인 정보 유출이 걱정돼요.</string>
    <string name="delete_account_reason_2">자주 사용하지 않아요.</string>
    <string name="delete_account_reason_3">서비스가 만족스럽지 않아요.</string>
    <string name="delete_account_reason_4">다른 아이디로 가입하려고요.</string>
    <string name="etc">기타</string>
    <string name="delete_account">탈퇴하기</string>
    <string name="hint_delete_account_reason">다른 이유가 있다면 알려주세요! 회원님의 소중한 의견이 서비스 개선에 큰 도움이 됩니다.</string>
    <string name="toast_delete_account_completion">탈퇴 처리가 완료되었습니다.\n그동안 외않와를 이용해 주셔서 감사합니다 :)</string>

    <string name="inquiry_feedback_title">어떤 문의를 원하시나요?\n아래에서 선택해주세요.</string>
    <string name="category_error_report">오류를 발견했어요</string>
    <string name="category_feedback">이렇게 개선하면 좋을 것 같아요</string>
    <string name="category_inquiry">질문 있어요</string>
    <string name="error_report">오류 제보하기</string>
    <string name="feedback">개선 피드백 보내기</string>
    <string name="inquiry">문의하기</string>
    <string name="content_empty">내용을 작성해주세요.</string>
    <string name="toast_inquiry">문의 전송 완료! 빠른 시일내 확인 후 답변드릴게요 :)</string>
    <string name="toast_feedback">소중한 피드백을 보내주셔서 감사합니다 :)</string>
    <string name="toast_error_report">오류를 제보해주셔서 감사합니다 :)</string>
    <string name="send">보내기</string>

    <string name="dialog_sign_out">로그아웃 하시겠어요?</string>
    <string name="dialog_title_delete_account">정말 탈퇴하시겠어요?</string>
    <string name="dialog_subtitle_delete_account">탈퇴 시 계정은 바로 삭제됩니다.</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>

    <string name="penalty_button_disable">대상과 벌칙을 선택해주세요</string>
    <string name="penalty_button_enable">선택 완료</string>
    <string name="make_meet_success_title">약속 만들기 완료!</string>
    <string name="make_meet_title">약속 만들기</string>
    <string name="go_to_home">홈으로 이동</string>
    <string name="invite_link_share">초대 링크 공유</string>
    <string name="penalty_empty">벌칙 없음</string>
    <string name="memo_empty">메모 없음</string>
    <string name="close">닫기</string>
    <string name="share_list_title">초대 옵션 선택</string>
    <string name="meet_request">참가 요청</string>
    <string name="alert">알림</string>
    <string name="apply_request">참가 요청</string>
    <string name="open_map">지도 열기</string>
    <string name="reject">거절</string>
    <string name="accept">수락</string>
    <string name="location_permission_title">위치정보 권한 요청</string>
    <string name="location_permission_message">항상 허용으로 해주세요</string>
</resources>
