<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/noto_sans_bold"
                android:gravity="center"
                android:minHeight="40dp"
                tool:text="@string/dialog_sign_out"
                android:textColor="@color/black_3"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_medium"
                android:gravity="center"
                android:minHeight="65dp"
                tool:text="@string/no"
                android:textColor="@color/black_alpha45"
                android:textSize="16dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_message" />

            <View
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="@color/black_alpha12"
                app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
                app:layout_constraintStart_toEndOf="@+id/tv_cancel"
                app:layout_constraintTop_toTopOf="@+id/tv_cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/noto_sans_medium"
                android:gravity="center"
                android:minHeight="65dp"
                tool:text="@string/yes"
                android:textColor="@color/keyColor"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_cancel"
                app:layout_constraintTop_toBottomOf="@+id/tv_message" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>