<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/layout_title_bar"
            layout="@layout/view_title_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:fontFamily="@font/noto_sans_regular"
            android:hint="@string/sign_up_create_name_edt_hint"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="18dp"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title_bar"
            app:layout_constraintWidth_percent="0.83" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_clear_gray"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/edt_name"
            app:layout_constraintEnd_toEndOf="@+id/edt_name"
            app:layout_constraintTop_toTopOf="@+id/edt_name" />

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_available"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/edt_name"
            app:layout_constraintTop_toBottomOf="@+id/edt_name"
            tool:visibility="visible" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/sign_up_create_name_available_message"
            android:textColor="@color/keyColor"
            android:textSize="12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_error"
            app:layout_constraintStart_toEndOf="@+id/iv_error"
            app:layout_constraintTop_toTopOf="@+id/iv_error"
            tool:visibility="visible" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_btn_gray"
            android:enabled="false"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="center"
            android:text="@string/sign_up_next"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>