<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15.75dp"
            android:padding="10dp"
            android:src="@drawable/ic_iconbackblack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.13dp"
            android:text="@string/sign_up_service_terms_title"
            android:textColor="@color/black"
            android:textSize="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back"
            app:layout_constraintWidth_percent="0.83" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/bg_tv_gray"
            android:padding="20dp"
            android:scrollbars="vertical"
            android:text="아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아"
            app:layout_constraintEnd_toEndOf="@+id/tv_profile_guide"
            app:layout_constraintHeight_percent="0.486"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_guide"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_guide" />

        <CheckBox
            android:id="@+id/cb_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:button="@drawable/selector_cb_check"
            android:gravity="center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_guide"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"
            app:useMaterialThemeColors="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:scrollbars="vertical"
            android:text="@string/sign_up_service_terms_agree"
            android:textColor="@color/black2"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_check"
            app:layout_constraintStart_toEndOf="@+id/cb_check"
            app:layout_constraintTop_toTopOf="@+id/cb_check" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_btn_gray"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/sign_up_sign_up"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>